--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "assert": "^2.0.0",
     "axios": "^0.19.0",
     "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "node-fetch": "^2.6.0",
-    "puppeteer": "^5.2.1",
     "sinon": "^9.0.2"
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
     "jsdom-global": "3.0.2",
     "mocha": "^8.0.1",
     "nyc": "^15.1.0",
+    "puppeteer": "^5.2.1",
     "rewire": "^5.0.0"
   }
 }
